--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a href="{{ site.baseurl }}"><h2 class="footer-heading">{{ site.title }}</h2></a>
+    <a href="{{ site.baseurl }}/"><h2 class="footer-heading">{{ site.title }}</h2></a>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
