--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,9 @@ layout: default
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
+
+    <br /> <br /> <hr />
+    To read source of this page, visit: <a href="{{ site.git_repository_path }}/{{ page.path }}">git repo</a>
   </div>
 
 </article>
