--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,3 +204,17 @@ pre {
         }
     }
 }
+
+.icon-main {
+
+    > svg {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        vertical-align: middle;
+
+        path {
+            fill: $grey-color;
+        }
+    }
+}
