Fixed logo styling issue with GitHub

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
     <a class="site-title" href="{{ site.baseurl }}/">
-      <span class="icon-main">{% include icon.svg %}</span>
+      {% include icon.svg %}
       {{ site.title }}
     </a>
 
