--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -22,6 +22,17 @@
     &:visited {
         color: $grey-color-dark;
     }
+
+    > svg {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        vertical-align: middle;
+
+        path {
+            fill: $grey-color;
+        }
+    }
 }
 
 .site-nav {
