--- a/css/main.scss
+++ b/css/main.scss
@@ -3,36 +3,35 @@
 ---
 @charset "utf-8";
 
-/* open-sans-regular - latin */
+/* roboto-regular - latin */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url('../assets/fonts/open-sans-v23-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('../assets/fonts/roboto-v27-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../assets/fonts/open-sans-v23-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../assets/fonts/open-sans-v23-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../assets/fonts/open-sans-v23-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../assets/fonts/open-sans-v23-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../assets/fonts/open-sans-v23-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
+       url('../assets/fonts/roboto-v27-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/roboto-v27-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../assets/fonts/roboto-v27-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/roboto-v27-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/roboto-v27-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
-/* open-sans-700 - latin */
+/* roboto-700 - latin */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  src: url('../assets/fonts/open-sans-v23-latin-700.eot'); /* IE9 Compat Modes */
+  src: url('../assets/fonts/roboto-v27-latin-700.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../assets/fonts/open-sans-v23-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../assets/fonts/open-sans-v23-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../assets/fonts/open-sans-v23-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../assets/fonts/open-sans-v23-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../assets/fonts/open-sans-v23-latin-700.svg#OpenSans') format('svg'); /* Legacy iOS */
+       url('../assets/fonts/roboto-v27-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/roboto-v27-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../assets/fonts/roboto-v27-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/roboto-v27-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/roboto-v27-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
-
 // Our variables
-$base-font-family: "Open Sans", sans-serif, Arial;
+$base-font-family: "Roboto", sans-serif, Arial;
 $base-font-size:   18px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
