--- a/css/main.scss
+++ b/css/main.scss
@@ -3,74 +3,35 @@
 ---
 @charset "utf-8";
 
-/* merriweather-300 - latin */
+/* hahmlet-regular - latin */
 @font-face {
-  font-family: 'Merriweather';
-  font-style: normal;
-  font-weight: 300;
-  src: url('../assets/fonts/merriweather-v25-latin-300.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../assets/fonts/merriweather-v25-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../assets/fonts/merriweather-v25-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../assets/fonts/merriweather-v25-latin-300.woff') format('woff'), /* Modern Browsers */
-       url('../assets/fonts/merriweather-v25-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../assets/fonts/merriweather-v25-latin-300.svg#Merriweather') format('svg'); /* Legacy iOS */
-}
-/* merriweather-300italic - latin */
-@font-face {
-  font-family: 'Merriweather';
-  font-style: italic;
-  font-weight: 300;
-  src: url('../assets/fonts/merriweather-v25-latin-300italic.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../assets/fonts/merriweather-v25-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../assets/fonts/merriweather-v25-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../assets/fonts/merriweather-v25-latin-300italic.woff') format('woff'), /* Modern Browsers */
-       url('../assets/fonts/merriweather-v25-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../assets/fonts/merriweather-v25-latin-300italic.svg#Merriweather') format('svg'); /* Legacy iOS */
-}
-/* merriweather-regular - latin */
-@font-face {
-  font-family: 'Merriweather';
+  font-family: 'Hahmlet';
   font-style: normal;
   font-weight: 400;
-  src: url('../assets/fonts/merriweather-v25-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('../assets/fonts/hahmlet-v1-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../assets/fonts/merriweather-v25-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../assets/fonts/merriweather-v25-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../assets/fonts/merriweather-v25-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../assets/fonts/merriweather-v25-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../assets/fonts/merriweather-v25-latin-regular.svg#Merriweather') format('svg'); /* Legacy iOS */
+       url('../assets/fonts/hahmlet-v1-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/hahmlet-v1-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../assets/fonts/hahmlet-v1-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/hahmlet-v1-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/hahmlet-v1-latin-regular.svg#Hahmlet') format('svg'); /* Legacy iOS */
 }
-/* merriweather-700 - latin */
+/* hahmlet-700 - latin */
 @font-face {
-  font-family: 'Merriweather';
+  font-family: 'Hahmlet';
   font-style: normal;
   font-weight: 700;
-  src: url('../assets/fonts/merriweather-v25-latin-700.eot'); /* IE9 Compat Modes */
+  src: url('../assets/fonts/hahmlet-v1-latin-700.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../assets/fonts/merriweather-v25-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../assets/fonts/merriweather-v25-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../assets/fonts/merriweather-v25-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../assets/fonts/merriweather-v25-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../assets/fonts/merriweather-v25-latin-700.svg#Merriweather') format('svg'); /* Legacy iOS */
-}
-/* merriweather-700italic - latin */
-@font-face {
-  font-family: 'Merriweather';
-  font-style: italic;
-  font-weight: 700;
-  src: url('../assets/fonts/merriweather-v25-latin-700italic.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../assets/fonts/merriweather-v25-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../assets/fonts/merriweather-v25-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../assets/fonts/merriweather-v25-latin-700italic.woff') format('woff'), /* Modern Browsers */
-       url('../assets/fonts/merriweather-v25-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../assets/fonts/merriweather-v25-latin-700italic.svg#Merriweather') format('svg'); /* Legacy iOS */
+       url('../assets/fonts/hahmlet-v1-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/hahmlet-v1-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../assets/fonts/hahmlet-v1-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/hahmlet-v1-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/hahmlet-v1-latin-700.svg#Hahmlet') format('svg'); /* Legacy iOS */
 }
 
 // Our variables
-$base-font-family: "Merriweather", sans-serif, Arial;
+$base-font-family: "Hahmlet", sans-serif, Arial;
 $base-font-size:   18px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
