Use Indie Flower fonts for site title

--- a/css/main.scss
+++ b/css/main.scss
@@ -30,6 +30,20 @@
        url('../assets/fonts/hahmlet-v1-latin-700.svg#Hahmlet') format('svg'); /* Legacy iOS */
 }
 
+/* indie-flower-regular - latin */
+@font-face {
+  font-family: 'Indie Flower';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../assets/fonts/indie-flower-v12-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../assets/fonts/indie-flower-v12-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/indie-flower-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../assets/fonts/indie-flower-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/indie-flower-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/indie-flower-v12-latin-regular.svg#IndieFlower') format('svg'); /* Legacy iOS */
+}
+
 // Our variables
 $base-font-family: "Hahmlet", sans-serif, Arial;
 $base-font-size:   18px;
