--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,8 +11,9 @@
 }
 
 .site-title {
-    font-size: 26px;
-    font-weight: 300;
+    font-family: "Indie Flower";
+    font-size: 32px;
+    font-weight: 400;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
