Messing with CSS - part 1
In reality, it fixes quite a few things such as margines in section
headings,  styling of blockquotes, weird hanging underline in site
title etc.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-    margin-bottom: $spacing-unit / 2;
+    margin-bottom: $spacing-unit / 3;
 }
 
 
@@ -113,9 +113,12 @@ blockquote {
     color: $grey-color;
     border-left: 4px solid $grey-color-light;
     padding-left: $spacing-unit / 2;
-    font-size: 18px;
-    letter-spacing: -1px;
-    font-style: italic;
+    margin-top: $spacing-unit / 2;
+    margin-bottom: $spacing-unit / 2;
+    font-family: Sans-Serif;
+    line-height: $base-line-height - 0.2;
+    font-size: $base-font-size;
+    letter-spacing: 1px;
 
     > :last-child {
         margin-bottom: 0;
