--- a/css/main.scss
+++ b/css/main.scss
@@ -45,8 +45,8 @@
 }
 
 // Our variables
-$base-font-family: "Hahmlet", sans-serif, Arial;
-$base-font-size:   14px;
+$base-font-family: "Hahmlet", serif, Arial;
+$base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
