--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,6 +5,7 @@
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
+    background: #f0f0f0;
 
     // Positioning context for the mobile navigation icon
     position: relative;
@@ -21,7 +22,11 @@
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: $text-color;
+    }
+
+    &:hover {
+	text-decoration: none;
     }
 
     > svg {
@@ -216,36 +221,43 @@
 }
 
 .post-title {
-    font-size: 32px;
-    letter-spacing: -1px;
+    font-size: 38px;
+    letter-spacing: -0.5px;
     line-height: 1;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+        font-size: 40px;
     }
 }
 
 .post-content {
-    margin-bottom: $spacing-unit;
+    margin-top: $spacing-unit / 1.5;
+    margin-bottom: $spacing-unit / 3;
 
-    h2 {
+    h1 {
         font-size: 32px;
+	margin-top: $spacing-unit / 1.5;
+	margin-bottom: $spacing-unit / 3;
 
         @include media-query($on-laptop) {
             font-size: 28px;
         }
     }
 
-    h3 {
+    h2 {
         font-size: 26px;
+	margin-top: $spacing-unit / 1.5;
+	margin-bottom: $spacing-unit / 3;
 
         @include media-query($on-laptop) {
             font-size: 22px;
         }
     }
 
-    h4 {
+    h3 {
         font-size: 20px;
+	margin-top: $spacing-unit / 1.5;
+	margin-bottom: $spacing-unit / 3;
 
         @include media-query($on-laptop) {
             font-size: 18px;
