Improved posts heading margins

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -232,12 +232,12 @@
 
 .post-content {
     margin-top: $spacing-unit / 1.5;
-    margin-bottom: $spacing-unit / 3;
+    margin-bottom: $spacing-unit - $spacing-unit;
 
     h1 {
         font-size: 32px;
 	margin-top: $spacing-unit / 1.5;
-	margin-bottom: $spacing-unit / 3;
+	margin-bottom: $spacing-unit - $spacing-unit;
 
         @include media-query($on-laptop) {
             font-size: 28px;
@@ -247,7 +247,7 @@
     h2 {
         font-size: 26px;
 	margin-top: $spacing-unit / 1.5;
-	margin-bottom: $spacing-unit / 3;
+	margin-bottom: $spacing-unit - $spacing-unit;
 
         @include media-query($on-laptop) {
             font-size: 22px;
@@ -257,7 +257,7 @@
     h3 {
         font-size: 20px;
 	margin-top: $spacing-unit / 1.5;
-	margin-bottom: $spacing-unit / 3;
+	margin-bottom: $spacing-unit - $spacing-unit;
 
         @include media-query($on-laptop) {
             font-size: 18px;
