A/B testing with fonts
It is fake A/B testing of course

--- a/css/main.scss
+++ b/css/main.scss
@@ -30,6 +30,38 @@
     src: url('../assets/fonts/OpenSans/OpenSans-Italic-VariableFont_wdth,wght.ttf');
 }
 
+@font-face {
+    font-family: charter;
+    font-style: normal;
+    font-weight: normal;
+    font-stretch: normal;
+    src: url('../assets/fonts/Charter/charter_regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: charter;
+    font-style: italic;
+    font-weight: normal;
+    font-stretch: normal;
+    src: url('../assets/fonts/Charter/charter_italic.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: charter;
+    font-style: normal;
+    font-weight: bold;
+    font-stretch: normal;
+    src: url('../assets/fonts/Charter/charter_bold.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: charter;
+    font-style: italic;
+    font-weight: bold;
+    font-stretch: normal;
+    src: url('../assets/fonts/Charter/charter_bold_italic.woff2') format('woff2');
+}
+
 
 /* indie-flower-regular - latin */
 @font-face {
@@ -48,11 +80,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300');
 
 // Our variables
-$base-font-family: 'Open Sans', sans-serif;
-$base-font-size:   18px;
+$base-font-family: 'Charter', sans-serif;
+$base-font-size:   22px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
+$base-line-height: 1.6;
 
 $monospace-font-family: 'Roboto Mono';
 $monospace-font-weight: 300;
