--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,6 +18,7 @@ body {
     font-weight: $base-font-weight;
     font-size: $base-font-size;
     line-height: $base-line-height;
+    letter-spacing: 0px;
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
@@ -37,7 +38,7 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-    margin-bottom: $spacing-unit / 3;
+    margin-bottom: $spacing-unit;
 }
 
 
@@ -73,6 +74,7 @@ ul, ol {
 }
 
 li {
+    margin-bottom: 10px;
     > ul,
     > ol {
          margin-bottom: 0;
