--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -199,7 +199,11 @@
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit;
+        margin-bottom: $spacing-unit - 20;
+
+	> h2 {
+	    margin-bottom: $spacing-unit - 10;
+	}
     }
 }
 
