Trying `rem` and `pt` instead of `px`

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,13 @@
                 "noErrors.js",
                 "noUndefined.js",
             ]
-        }
+        },
+	"HTML-CSS" : {
+            availableFonts : ["STIX"],
+            preferredFont : "STIX",
+            webFont : "STIX",
+            imageFont : null
+	}
     });
   </script>
 
