--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,7 +13,7 @@
 
 .site-title {
     font-family: "Indie Flower";
-    font-size: 32px;
+    font-size: 1.6rem;
     font-weight: 400;
     line-height: 56px;
     letter-spacing: -1px;
@@ -121,7 +121,7 @@
 }
 
 .footer-heading {
-    font-size: 18px;
+    font-size: 0.9rem;
     margin-bottom: $spacing-unit / 2;
 }
 
@@ -132,7 +132,7 @@
 }
 
 .footer-col-wrapper {
-    font-size: 15px;
+    font-size: 0.75rem;
     color: $grey-color;
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
@@ -190,7 +190,7 @@
 }
 
 .page-heading {
-    font-size: 20px;
+    font-size: 1rem;
 }
 
 .post-list {
@@ -216,7 +216,7 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
+    font-size: 1.2rem;
     font-weight: 500;
 }
 
@@ -231,14 +231,10 @@
 
 .post-title {
     font-family: 'EB Garamond';
-    font-size: 34px;
+    font-size: 1.7rem;
     font-feature-settings: 'smcp' 1;
     font-weight: 500;
     line-height: 1;
-
-    @include media-query($on-laptop) {
-        font-size: 34px;
-    }
 }
 
 .post-content {
@@ -246,15 +242,11 @@
 
     h1 {
 	font-family: 'EB Garamond';
-        font-size: 32px;
+        font-size: 1.6rem;
 	font-weight: $post-content-header-weight;
 	font-feature-settings: 'smcp' 1;
 	margin-top: $spacing-unit - 10;
 	margin-bottom: $spacing-unit - $spacing-unit;
-
-        @include media-query($on-laptop) {
-            font-size: 28px;
-        }
     }
     h1:after {
 	content:' ';
@@ -266,28 +258,20 @@
 
     h2 {
 	font-family: 'EB Garamond';
-        font-size: 26px;
+        font-size: 1.3rem;
 	font-weight: $post-content-header-weight;
 	font-feature-settings: 'smcp' 1;
 	margin-top: $spacing-unit - 15;
 	margin-bottom: $spacing-unit - 20;
-
-        @include media-query($on-laptop) {
-            font-size: 22px;
-        }
     }
 
     h3 {
 	font-family: 'EB Garamond';
-        font-size: 20px;
+        font-size: 1rem;
 	font-weight: $post-content-header-weight;
 	font-feature-settings: 'smcp' 1;
 	margin-top: $spacing-unit - 15;
 	margin-bottom: $spacing-unit - 20;
 	margin-bottom: $spacing-unit - $spacing-unit;
-
-        @include media-query($on-laptop) {
-            font-size: 18px;
-        }
     }
 }
