--- a/css/main.scss
+++ b/css/main.scss
@@ -81,13 +81,14 @@
 
 // Our variables
 $base-font-family: 'Charter', sans-serif;
-$base-font-size:   22px;
+$base-font-size:   16pt;
 $base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
+$small-font-size:  0.875rem;
 $base-line-height: 1.6;
 
 $monospace-font-family: 'IBM Plex Mono';
 $monospace-font-weight: 400;
+$monospace-font-size: 0.75rem;
 
 $post-content-header-weight: 400;
 
