--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -20,6 +20,7 @@ dl, dd, ol, ul, figure {
     -o-font-feature-settings: "kern" 1;
     font-feature-settings: "kern" 1,"liga" 1;
     font-kerning: normal;
+    color: $text-color;
 }
 
 /**
