--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
   <script type="text/javascript" async
-	  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
+	  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -29,12 +29,13 @@
                 "AMSsymbols.js",
                 "noErrors.js",
                 "noUndefined.js",
-            ]
+            ],
+	    equationNumbers: { autoNumber: "AMS" }
         },
 	"HTML-CSS" : {
-            availableFonts : ["STIX"],
-            preferredFont : "STIX",
-            webFont : "STIX",
+            availableFonts : ["Neo Euler"],
+            preferredFont : "Neo-Euler",
+            webFont : "Neo-Euler",
             imageFont : null
 	}
     });
