Footer now has RSS logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description }} <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS.</a></p>
+        <p>{{ site.description }} <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via <img src="/assets/images/rss-512-1.png" /></a></p>
       </div>
     </div>
 
