CSS for table, remove unused font imports

--- a/css/main.scss
+++ b/css/main.scss
@@ -20,17 +20,6 @@
 }
 
 @font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    src: url('../assets/fonts/OpenSans/OpenSans-VariableFont_wdth,wght.ttf');
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-style: italic;
-    src: url('../assets/fonts/OpenSans/OpenSans-Italic-VariableFont_wdth,wght.ttf');
-}
-
-@font-face {
     font-family: charter;
     font-style: normal;
     font-weight: normal;
@@ -80,7 +69,7 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&display=swap');
 
 // Our variables
-$base-font-family: 'Charter', sans-serif;
+$base-font-family: 'Charter', serif;
 $base-font-size:   16pt;
 $base-font-weight: 400;
 $small-font-size:  0.875rem;
@@ -104,6 +93,8 @@ $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
 $content-width:    700px;
+
+$table-text-align: left !default;
 
 $on-palm:          600px;
 $on-laptop:        700px;
